# dualkey-tools

./: .gitignore  README.md
linux/: dualkey-tools.service  install.sh  rules.yaml  udevmon.yaml
macos/: dualkey-anti-rsi.json  importconfig.html
src/: CMakeLists.txt  main.cpp
src/lib/: ConfigLoader.cpp  ConfigLoader.h  CustomSymbol.cpp  CustomSymbol.h  InputEvent.cpp  InputEvent.h  KeyCode.h  KeyState.h  ModifierFlags.h  ModifierState.cpp  ModifierState.h  UnicodeSymbol.h
src/lib/handler/: DeadKeyHandler.cpp  DeadKeyHandler.h  DebugKeyHandler.h  DualKeyHandler.cpp  DualKeyHandler.h  HandlerComposer.cpp  HandlerComposer.h  IKeyEventHandler.h  OutputKeyCodeHandler.cpp  OutputKeyCodeHandler.h
src/lib/hooks/: IKeyHook.h  LinuxKeyHook.cpp  LinuxKeyHook.h
